# glad-tpc

./: .gitignore  CMakeLists.txt  CleanToCommit.sh  Instruction.md  README.md  run_full.sh
.github/workflows/: main.yml
fitter/: CMakeLists.txt  fitter.cxx  fitter.h
geometry/: HYDRA_FullBeamIn.geo.root  HYDRA_FullBeamIn.v1.geo.root  HYDRA_FullBeamIn.v2.geo.root  HYDRA_FullBeamIn.v3.geo.root  HYDRA_FullBeamOut.geo.root  HYDRA_Fullv1.geo.root  HYDRA_Fullv2.geo.root  HYDRA_Prototype.geo.root  HYDRA_v1.geo.root  gladTPC_TOMC.geo.root  gladTPC_test.geo.root  gladTPC_v0.0.geo.root  gladTPC_v1.geo.root  media_tpc.geo
geometry/passive/: Target.geo.root
gtpc/: CMakeLists.txt  GTPCLinkDef.h  R3BGHYDRASetup.cxx  R3BGHYDRASetup.h  R3BGTPC.cxx  R3BGTPC.h  R3BGTPCCal2Hit.cxx  R3BGTPCCal2Hit.h  R3BGTPCCalPar.cxx  R3BGTPCCalPar.h  R3BGTPCContFact.cxx  R3BGTPCContFact.h  R3BGTPCElecPar.cxx  R3BGTPCElecPar.h  R3BGTPCGasPar.cxx  R3BGTPCGasPar.h  R3BGTPCGeoPar.cxx  R3BGTPCGeoPar.h  R3BGTPCHit2Track.cxx  R3BGTPCHit2Track.h  R3BGTPCHitPar.cxx  R3BGTPCHitPar.h  R3BGTPCLangevin.cxx  R3BGTPCLangevin.h  R3BGTPCLangevinTest.cxx  R3BGTPCLangevinTest.h  R3BGTPCMapped2Cal.cxx  R3BGTPCMapped2Cal.h  R3BGTPCProjector.cxx  R3BGTPCProjector.h  R3BGTPCSetup.cxx  R3BGTPCSetup.h  README.md
gtpc/inputs/: ConfigFilePlane.txt  ConfigFileRings.txt  ConfigFileSetup.txt  Electronic_FileSetup.txt  HYDRAFullBeamIn_FileSetup.txt  HYDRAFullBeamOut_FileSetup.txt  HYDRAFullv1_FileSetup.txt  HYDRAFullv2_FileSetup.txt  HYDRAprototype_FileSetup.txt  Target_FileSetup.txt
gtpcdata/: CMakeLists.txt  R3BGTPCCalData.cxx  R3BGTPCCalData.h  R3BGTPCDataLinkDef.h  R3BGTPCHitClusterData.cxx  R3BGTPCHitClusterData.h  R3BGTPCHitData.cxx  R3BGTPCHitData.h  R3BGTPCMappedData.cxx  R3BGTPCMappedData.h  R3BGTPCPoint.cxx  R3BGTPCPoint.h  R3BGTPCProjPoint.cxx  R3BGTPCProjPoint.h  R3BGTPCTrackData.cxx  R3BGTPCTrackData.h
gtpcdata/PrimaryGenerators/: BackgroundGenerator.cc  GenerateInputASCII_PhaseSpaceDecay_hypertriton.cc  GenerateInputASCII_PhaseSpaceDecay_hypertriton_cc.d  GenerateInputASCII_PhaseSpaceDecay_hypertriton_cc_ACLiC_dict_rdict.pcm  GenerateInputTree_PhaseSpaceDecay_lamba.cc  SignalplusBackgroundGenerator-Backup.cc
gtpcdata/PrimaryGenerators/root/: input_beam_dcm_C12C12_1.9.root
gtpceve/: CMakeLists.txt  GTPCEveLinkDef.h  R3BGTPCEventDrawTask.cxx  R3BGTPCEventDrawTask.h  R3BGTPCEventManager.cxx  R3BGTPCEventManager.h
gtpcgen/: Generator_paper_Hypertriton.cc  INCL_Background_ASCIIGenerator.cc  PhaseSpaceDecay_hypertriton_ASCIIGenerator.cc  PhaseSpaceDecay_hypertriton_ASCIIGenerator_cc.d  PhaseSpaceDecay_hypertriton_ASCIIGenerator_cc_ACLiC_dict_rdict.pcm  SignalplusBackgroundGenerator.cc  SigplusBkg_generator_addingKaons.C  run_efficiency.sh  run_generator.C
gtpcgen/SigPlusBKG/: Decay_hyper.C  Mylib.h  SignalplusBackgroundGenerator.cc  Variables_decay.C  Z_A_MASS.data
gtpcmap/: CMakeLists.txt  R3BGTPCMap.cxx  R3BGTPCMap.h  R3BGTPCMapLinkDef.h
gtpcreconstruction/: CMakeLists.txt  R3BGTPCFitter.cxx  R3BGTPCFitter.h  R3BGTPCReconstructionLinkDef.h  R3BGTPCSpacePointMeasurement.cxx  R3BGTPCSpacePointMeasurement.h  R3BGTPCTrackFinder.cxx  R3BGTPCTrackFinder.h
gtpcreconstruction/tripclust/src/: cluster.h  dnn.cpp  dnn.h  graph.h  option.cpp  option.h  pointcloud.h  triplet.h  util.cpp
gtpcreconstruction/tripclust/src/hclust/: fastcluster.cpp  fastcluster_R_dm.cpp
gtpcreconstruction/tripclust/src/kdtree/: kdtree.cpp
gtpcreconstruction/triplclust/src/: cluster.cxx  cluster.h  dnn.cxx  graph.cxx  main.cpp  option.cxx  output.cxx  output.h  pointcloud.cpp  pointcloud.cxx  pointcloud.h  triplet.cpp  triplet.cxx  util.h
gtpcreconstruction/triplclust/src/hclust/: fastcluster.cxx  fastcluster.h  fastcluster_dm.cxx
gtpcreconstruction/triplclust/src/kdtree/: kdtree.cxx  kdtree.h
macros/: CMakeLists.txt  README.md  rootlogon.C
macros/Analysis/: Analysis.C  rootlogon.C  run_analysis.C
macros/electronics/: CMakeCache.txt  CMakeLists.txt  Electronics.C  Electronics_MT.C  Makefile  README  cmake_install.cmake  rootlogon.C  run_ele.sh  runelectronics.C
macros/electronics/AGET/: Draw_electronics.C  README-ele_output  rootlogon.C  run_draw.C
macros/geo/: create_HYDRA_FullBeamIn_geo.C  create_HYDRA_FullBeamOut_geo.C  create_HYDRA_Fullv1_geo.C  create_HYDRA_Fullv2_geo.C  create_HYDRA_Prototype_geo.C  create_HYDRA_geo.C  create_tpc_geo.C  create_tpc_geo_TOMC.C  create_tpc_geo_test.C  rootlogon.C  run_create.C
macros/geo/passive/: create_Target.C  rootlogon.C
macros/proj/: ana_lang.C  map_lang.C  plot_canvas.C  readProjPoints.C  readVPadPlane.C  rootlogon.C  run_lang.C  run_lang_test.C  run_proj.C  run_readVPadPlane.C
macros/proj/FullBeamIn/: Padplane_readout.C  rootlogon.C  runPadPlane_readout.C
macros/proj/FullBeamIn/v2/: Padplane_readout.C
macros/proj/FullBeamOut/: Padplane_readout.C  rootlogon.C
macros/proj/Prototype/: Padplane_readout.C  Padplane_readout_cal.C  output_readout.ps  rootlogon.C  runPadPlane_readout.C
macros/proj_test/: README  README_MAPFIELD  ana_lang.C  run_CHECKFIELD.C  run_lang.C  run_lang_test.C  run_readVPadPlane_lang.C  run_readVPadPlane_lang_test.C
macros/reco/: Residues.C  residues.C  rootlogon.C  run_reconstruction.C
macros/sim/: .run_simHYDRA.C.swp  checkAll.C  eventDisplay.C  rootlogon.C  run_HYDRA.C  run_sim.C  run_simHYDRA.C  simHYDRA.C
macros/sim/FullBeamIn/: checkAll.C  eventDisplay.C  rootlogon.C
macros/sim/FullBeamOut/: checkAll.C
macros/sim/Prototype/: checkAll.C  eventDisplay.C  rootlogon.C
macros/tracking/: run_tracking.C
macros/vis/: readVPadPlane.C  rootlogon.C  run_eve.C  run_readVPadPlane.C  test_padplane.C
params/: Electronic_FileSetup.par  HYDRAFullBeamIn_FileSetup.par  HYDRAFullBeamOut_FileSetup.par  HYDRAprototype_FileSetup.par  HYDRAprototype_FileSetup_v2_02082022.par  Hit_FileSetup.par  Target_FileSetup.par
(+1 files in other folders)
